tdf#152989 sc: fix oversized rectangle of edited embedded object

Editing resulted unusably oversized OLE objects. Keep
its original size to fix the UX problem.

Note: lost zoom is still a problem.

See also commit fdf95de18ef1891862bdce26669d1ce2c6f24764
"tdf#152991 sd: fix oversized rectangle of edited embedded object"

Change-Id: I6b73d1aea76ea4addc24ff978403893c3cbd3dac
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145432
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit a1f16b4603bffddb2f6380874d63f928289de85a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145588
Tested-by: Jenkins
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>